# build/server/common/swagger/Api.yaml
@@ -29,6 +29,19 @@ definitions:
       name:
         type: string
         description: The example name
+  AuthBody:
+    type: object
+    title: credentials
+    required:
+      - username
+      - password
+    properties:
+      username:
+        type: string
+        description: Admin password
+      password:
+        type: string
+        description: Admin password
 securityDefinitions:
   Bearer:
     type: apiKey
@@ -74,9 +87,24 @@ paths:
         404:
           description: Example not 
   /auth:
-    get:
+    post:
       tags:
         - Auth
+      consumes:
+        - application/json
+      parameters:
+        - username: credentials
+          in: body
+          description: Admin username
+          required: true
+          schema: 
+            $ref: "#/definitions/AuthBody"
+        - password: credentials
+          in: body
+          description: Admin password
+          required: true
+          schema: 
+            $ref: "#/definitions/AuthBody"
       responses:
         200:
           description: Return the access token
